--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,15 @@ dependencies:
   freezed: ^3.1.0
   freezed_annotation: ^3.1.0
 
-  flutter_local_notifications: ^19.3.0
+  flutter_local_notifications: ^18.0.0
   flutter_bloc: ^9.1.1
   build_runner: ^2.5.4
   shared_preferences: ^2.5.3
   get_it: ^8.0.3
   smooth_page_indicator: ^1.2.1
+  timezone: ^0.9.4
+  permission_handler: ^12.0.1
+
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +74,8 @@ flutter:
   assets:
     - assets/svg/
     - assets/png/
+    - assets/svg/login/
+    - assets/svg/on_boarding/
 
   fonts:
     - family: geometr
@@ -79,6 +84,9 @@ flutter:
     - family: gil_sans
       fonts:
         - asset: fonts/gil_Sans_MT.ttf
+    - family: sf-ui
+      fonts:
+        - asset: fonts/sf-ui-display-black.otf
 
 
 
