--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   timezone: ^0.9.4
   permission_handler: ^12.0.1
+  firebase_core: ^3.15.1
+  firebase_messaging: ^15.2.9
+  firebase_storage: ^12.4.9
+  firebase_remote_config: ^5.4.7
+  firebase_analytics: ^11.5.2
 
 
 dev_dependencies:
