--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,12 @@ dependencies:
   firebase_storage: ^12.4.9
   firebase_remote_config: ^5.4.7
   firebase_analytics: ^11.5.2
+  flutter_facebook_auth: ^7.1.2
 
+
+
+dependency_overrides:
+  firebase_auth: ^5.6.2
 
 dev_dependencies:
   flutter_test:
