--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_core: ^3.15.1
   firebase_messaging: ^15.2.9
   firebase_storage: ^12.4.9
+  cloud_firestore: ^5.6.11
   firebase_remote_config: ^5.4.7
   firebase_analytics: ^11.5.2
   flutter_facebook_auth: ^7.1.2
@@ -64,6 +65,9 @@ dependencies:
   geolocator: ^14.0.2
   http: ^1.4.0
   font_awesome_flutter: ^10.8.0
+  talker: ^4.9.2
+
+
 
 
 
